# autoflake

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  AUTHORS.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  autoflake  autoflake.py  autostar.py  pyproject.toml  setup.cfg  setup.py  test_acid.py  test_acid_pypi.py  test_autoflake.py  test_fuzz.py  test_fuzz_pypi.py  tox.ini
.github/: dependabot.yml
.github/workflows/: main.yaml  upload-to-pypi.yml
test/: acid.py  test_autoflake.py
