[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoflake"
description = "Removes unused imports and unused variables"
license = { text = "MIT" }
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
]
keywords = ["clean", "fix", "automatic", "unused", "import"]
urls = { Homepage = "https://www.github.com/PyCQA/autoflake" }
requires-python = ">=3.10"
dependencies = ["pyflakes>=3.0.0", "tomli>=2.0.1;python_version<'3.11'"]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
autoflake = "autoflake:main"

[tool.hatch.version]
path = "autoflake.py"

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.hatch.build]
include = ["/autoflake.py", "/test_autoflake.py", "/LICENSE", "/README.md"]
exclude = ["/.gitignore"]
