[metadata]
name = autoflake
version = attr:autoflake.__version__
description = Removes unused imports and unused variables
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/PyCQA/autoflake
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Quality Assurance
kewords = clean, fix, automatic, unused, import

[options]
packages = find:
py_modules =
    autoflake
install_requires =
    pyflakes>=1.1.0
    toml>=0.10.2
python_requires = >=3.7
test_suite = test_autoflake

[options.entry_points]
console_scripts =
    autoflake = autoflake:main

[bdist_wheel]
universal = 1
